<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.battlegeek.CreditsActivity"
    android:background="@drawable/bg">

    <ImageButton
        android:id="@+id/buttonHome"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_button"/>

    <TextView
        android:id="@+id/textViewGameRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameRulesTitle"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="66dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGameRules"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gameRulesGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesGeneral"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="16sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesPrinciple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="@string/gameRulesPrinciple"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/gameRulesModes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="48dp"
                android:text="@string/gameRulesGameModes"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="16sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesLevels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesLevels"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/gameRulesLevelITitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="32dp"
                android:text="@string/gameRulesLevelITitle"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesLevelI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesLevelI"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/gameRulesLevelIITitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="32dp"
                android:text="@string/gameRulesLevelIITitle"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesLevelII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesLevelII"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/gameRulesLevelIIITitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="32dp"
                android:text="@string/gameRulesLevelIIITitle"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesLevelIII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesLevelIII"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/gameRulesLevelImpoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="32dp"
                android:text="@string/gameRulesLevelImpoTitle"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="14sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesLevelImpo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesLevelImpo"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    app:srcCompat="@drawable/tetromino_bonus_alive"/>

                <TextView
                    android:id="@+id/gameRulesSubtilitiesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:paddingLeft="16dp"
                    android:paddingTop="48dp"
                    android:text="@string/gameRulesSubtilitiesTitle"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesSubtilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesSubtilities"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:background="@color/yellow"
                    android:padding="5dp"
                    app:srcCompat="@drawable/move"/>

                <TextView
                    android:id="@+id/gameRulesBonusITitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:text="@string/gameRulesBonusITitle"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesBonusI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesBonusI"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:background="@color/yellow"
                    android:padding="5dp"
                    app:srcCompat="@drawable/replay"/>

                <TextView
                    android:id="@+id/gameRulesBonusIITitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:text="@string/gameRulesBonusIITitle"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesBonusII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesBonusII"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:background="@color/yellow"
                    android:padding="5dp"
                    app:srcCompat="@drawable/bomb"/>

                <TextView
                    android:id="@+id/gameRulesBonusIIITitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:text="@string/gameRulesBonusIIITitle"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesBonusIII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="16dp"
                android:text="@string/gameRulesBonusIII"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="32dp"
                android:text="@string/gameRulesEnd"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/gameRulesPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="64dp"
                android:text="@string/gameRulesPS"
                android:textColor="@color/yellow"
                android:textSize="10sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>