<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstTimeBackgroundView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="fr.wcs.battlegeek.FirstTimeUsernameScreen"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/message_title"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/message_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textAlignment="center"/>

    <TextView
        android:id="@+id/message_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/message_welcome"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_title"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/message_firstusername"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_playername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_welcome"/>

    <EditText
        android:id="@+id/input_playername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_light"
        android:hint="@string/player_name"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textColorHint="@android:color/holo_orange_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshapesave"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/buttonValidate"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_playername"/>

</android.support.constraint.ConstraintLayout>
