<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="fr.wcs.battlegeek.RankingActivity">

    <Spinner
        android:id="@+id/spinnerLevelRanking"
        style="@style/spinner_style"
        android:layout_width="300dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankingTitle"/>

    <ImageButton
        android:id="@+id/buttonHome"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_button" />

    <TextView
        android:id="@+id/rankingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/titleRanking"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:cacheColorHint="#FFFFFF"
        android:clipToPadding="false"
        android:divider="#39ce39"
        android:dividerHeight="1dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLevelRanking">

        <TextView
            android:id="@+id/textViewLabelName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:text="Nom"
            android:textAlignment="textStart"
            android:textColor="@color/yellow"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/textViewLabelRatio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/ratio"
            android:textColor="@color/yellow"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/textViewLabelBestTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/bestTime"
            android:textColor="@color/yellow"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/textViewLabelShotsCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/bestShotsCountLabel"
            android:textColor="@color/yellow"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/textViewLabelGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/gamesParts"
            android:textColor="@color/yellow"
            android:textSize="10sp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
